--- a/scss/style.css
+++ b/scss/style.css
@@ -1,1 +1,469 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+html {
+  font-size: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 1rem;
+  line-height: 1.3;
+  font-family: "Bai Jamjuree", sans-serif;
+  color: #9fabb2;
+  background-size: contain;
+  background-position: center top;
+  background-repeat: no-repeat;
+}
+
+@media screen and (min-width: 700px) {
+  body {
+    background-image: url("/images/bg-header-desktop.png");
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  body {
+    font-size: 1.15rem;
+  }
+}
+
+h1,
+h2,
+h3 {
+  color: #4c545d;
+  font-weight: 600;
+  margin-top: 0;
+}
+
+h1 {
+  font-size: 1.5rem;
+  margin-bottom: 25px;
+}
+
+@media screen and (min-width: 1000px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+}
+
+h2 {
+  font-size: 1.75rem;
+  margin-bottom: 16px;
+}
+
+@media screen and (min-width: 1000px) {
+  h2 {
+    font-size: 2.125rem;
+  }
+}
+
+button,
+.button {
+  position: relative;
+  border-radius: 100px;
+  color: #fff;
+  font-size: 0.875rem;
+  border: none;
+  outline: none;
+  padding: 16px 40px;
+  cursor: pointer;
+  -webkit-transition: 0.15s ease-in-out;
+  transition: 0.15s ease-in-out;
+}
+
+@media screen and (max-width: 699px) {
+  button,
+  .button {
+    width: 100%;
+  }
+}
+
+button.cyan,
+.button.cyan {
+  background-color: #26baa4;
+  border-bottom: 2px solid #26baa4;
+}
+
+button.cyan:hover,
+.button.cyan:hover {
+  background-color: #2acfb7;
+  -webkit-box-shadow: 0px 4px 10px rgba(38, 186, 164, 0.5);
+          box-shadow: 0px 4px 10px rgba(38, 186, 164, 0.5);
+}
+
+button.purple,
+.button.purple {
+  background-color: #6173ff;
+  border-bottom: 2px solid #6173ff;
+}
+
+button.purple:hover,
+.button.purple:hover {
+  background-color: #7a8aff;
+  -webkit-box-shadow: 0px 4px 10px rgba(97, 115, 255, 0.5);
+          box-shadow: 0px 4px 10px rgba(97, 115, 255, 0.5);
+}
+
+.wrapper {
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-bottom: 157px;
+  max-width: 1110px;
+  margin: auto;
+}
+
+@media screen and (min-width: 1000px) {
+  .wrapper {
+    padding-bottom: 142px;
+  }
+}
+
+.centered {
+  text-align: center;
+}
+
+.content {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.content img {
+  width: 100%;
+}
+
+p {
+  margin-top: 0;
+  max-width: 400px;
+  margin: auto;
+}
+
+p.large {
+  font-size: 1.2rem;
+}
+
+p.medium {
+  font-size: 1.124rem;
+  line-height: 1.75;
+}
+
+p.small {
+  font-size: 1rem;
+}
+
+.margin-bottom {
+  margin-bottom: 50px;
+  line-height: 1.6;
+}
+
+.lg-margin-bottom {
+  margin-bottom: 80px;
+}
+
+.xlg-margin-bottom {
+  margin-bottom: 80px;
+}
+
+.cta-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media screen and (min-width: 700px) {
+  .cta-container {
+    display: block;
+  }
+}
+
+.cta-container button:first-child {
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 700px) {
+  .cta-container button:first-child {
+    margin-bottom: 0;
+    margin-right: 16px;
+  }
+}
+
+.hero {
+  padding-top: 120px;
+}
+
+@media screen and (min-width: 700px) {
+  .hero {
+    padding-top: 130px;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .hero h1 br {
+    display: none;
+  }
+}
+
+.hero__logo {
+  margin-bottom: 32px;
+}
+
+@media screen and (min-width: 1000px) {
+  .supercharge__columns {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+  }
+}
+
+.supercharge__column {
+  margin-bottom: 60px;
+}
+
+.supercharge__icon {
+  height: 48px;
+  margin-bottom: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 36px;
+}
+
+@media screen and (min-width: 1000px) {
+  .supercharge__icon {
+    margin-bottom: 36px;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .logos__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+.logos__container .logo {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.logos__container .logo:not(:last-child) {
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 1000px) {
+  .logos__container .logo {
+    margin-bottom: 0;
+  }
+}
+
+footer {
+  background: #f5f6f8;
+  padding: 46px 32px;
+}
+
+footer .footer-container {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 1100px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+@media screen and (min-width: 700px) {
+  footer .footer-container {
+    text-align: left;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+footer .logo {
+  margin-bottom: 45px;
+}
+
+@media screen and (min-width: 700px) {
+  footer .logo {
+    margin-bottom: 0;
+  }
+}
+
+footer .logo img {
+  width: 60px;
+}
+
+@media screen and (min-width: 700px) {
+  footer .links {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    -ms-grid-rows: (1fr)[2];
+        grid-template-rows: repeat(2, 1fr);
+    -webkit-column-gap: 40px;
+            column-gap: 40px;
+    row-gap: 25px;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  footer .links {
+    -webkit-column-gap: 90px;
+            column-gap: 90px;
+    row-gap: 20px;
+  }
+}
+
+footer .links a {
+  display: block;
+  color: #4c545d;
+  text-decoration: none;
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 700px) {
+  footer .links a {
+    margin-bottom: 0;
+  }
+}
+
+footer .links a:last-child {
+  margin-bottom: 55px;
+}
+
+@media screen and (min-width: 700px) {
+  footer .links a:last-child {
+    margin-bottom: 0;
+  }
+}
+
+footer .links a:hover {
+  text-decoration: underline;
+}
+
+footer .links a:nth-child(1) {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+}
+
+footer .links a:nth-child(2) {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+}
+
+footer .links a:nth-child(3) {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+}
+
+footer .links a:nth-child(4) {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+}
+
+footer .links a:nth-child(5) {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3 / 4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+}
+
+footer .social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+footer .social a {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+footer .social a:not(:last-child) {
+  margin-right: 15px;
+}
+
+footer .social a.facebook {
+  background-image: url("/images/icon-facebook.svg");
+}
+
+footer .social a.twitter {
+  background-image: url("/images/icon-twitter.svg");
+}
+
+footer .social a.instagram {
+  background-image: url("/images/icon-instagram.svg");
+}
+/*# sourceMappingURL=style.css.map */
